--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html{
 }
 
 body{
-  background-image: url(../asset-main/wallpaperflare.com_wallpaper.jpg);
+  background-image: url(wallpaperflare.com_wallpaper.jpg);
   background-size: cover;
   background-position: center;
   width: 100%;
